# KnowledgeGraph

./: kg_import_libraries.py  main.py  mytest.csv  pyproject.toml  testspacy.py  wiki_sentences_v2.csv
