[tool.poetry]
name = "repl_python3_KnowledgeGraph"
version = "0.1.0"
description = ""
authors = ["aantoniobp <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.6.3"
pandas = "^1.3.4"
tqdm = "^4.62.3"
bs4 = "^0.0.1"
spacy = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
